Fixed invisible cursor outside of canvas

--- a/css/pixel-editor.scss
+++ b/css/pixel-editor.scss
@@ -354,7 +354,7 @@ svg {
 	left: 64px;
 	right: 48px;
 	top: 48px;
-	cursor: none;
+	cursor: default;
 	position: fixed;
 	display: block;
 }
